<resources>
    <string name="app_name">Fietsen</string>
    <string name="profile">Profiel</string>
    <string name="list">Lijst</string>
    <string name="filter">Filter</string>
    <string name="messageCenter">Berichtencentrum</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Inloggen</string>
    <string name="action_register">Registreren</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register_lastName">Achternaam</string>
    <string name="register_firstName">Voornaam</string>
    <string name="register_age">Leeftijd</string>
    <string name="register_password">Wachtwoord</string>
    <string name="register_repeatPassword">Herhaal wachtwoord</string>
    <string name="register_telephoneNumber">Telefoonnummer</string>
    <string name="register_email">Email</string>
    <string name="register_save">Opslaan</string>
    <string name="register_fietser">Registreren als fietser</string>
    <string name="register_fietsenmaker">Registreren als fietsenmaker</string>
    <string name="personalMessage">Hallo, ik ben fietsenmaker Jos.</string>
    <string name="txtNaamFietsemaker">Naam</string>
    <string name="txtInfo">Speciefieke Info</string>
    <string name="checkBox1">Damesfietsen</string>
    <string name="fotoFietsenmaker">Foto naar keuze van de fietsenmaker.</string>
    <string name="btnProfile2">Profiel</string>
    <string name="checkBox2">Herenfietsen</string>
    <string name="checkBox3">Koersfietsen</string>
    <string name="checkBox4">Mountainbikes</string>
    <string name="checkBox5">Elektrische fietsen</string>
    <string name="checkBox6">Speed Pedelecs</string>
    <string name="specialisaties">Specialisaties</string>
    <string name="txtFirstTimeLogin">Ik ben een: </string>
    <string name="txtFietser">Fietser</string>
    <string name="txtFietsenmaker">Fietsenmaker</string>
    <string name="txtRegistrerenFietsenmaker">Registreren als fietsenmaker</string>
    <string name="txtVoornaamFietsenmaker">Voornaam Zaakvoerder</string>
    <string name="txtAchternaamFietsenmaker">Achternaam Zaakvoerder</string>
    <string name="txtNaamWinkel">Naam Fietsenwinkel</string>
    <string name="txtAdresWinkel">Adres Fietsenwinkel</string>
    <string name="txtEmailFietsenmaker">Email</string>
    <string name="txtTelnrFietsenmaker">Telefoonnummer</string>
    <string name="txtPasswordFietsenmaker">Wachtwoord</string>
    <string name="txtRepeatPasswordFietsenmaker">Herhaal Wachtwoord</string>
    <string name="btnOpslaanProfielFietsenmaker">Opslaan</string>
    <string name="txtSpecialiteiten">Specialiteiten: </string>
    <string name="cbHerenfietsen">Herenfietsen</string>
    <string name="cbDamesfietsen">Damesfietsen</string>
    <string name="cbElektrischeFietsen">Elektrische Fietsen</string>
    <string name="cbKoersfietsen">Koersfietsen</string>
    <string name="cbMountainbikes">Mountainbikes</string>
    <string name="cbSpeedPedelecs">Speed Pedelecs</string>
    <string name="confirmation_text">Bedankt voor de registratie</string>
    <string name="confirmation_next">Verder</string>
    <string name="log_out">Uitloggen</string>
    <string name="MijnProfiel">Mijn profiel:</string>
    <string name="Update">Bewerken</string>
    <string name="UpdateProfile">Update profiel</string>
    <string name="btnUpdate">Update</string>
    <string name="lijst">Lijst van alle fietsenmakers:</string>
    <string name="login">Login</string>
    <string name="FsMainText">Welkom bij LIKE YOUR BIKE</string>
    <string name="FsFietser">U bent een fietser:</string>
    <string name="FsFietsenmaker">U bent een fietsenmaker:</string>
    <string name="FsClick">KLIK HIER</string>
    <string name="FsDev">Developed by Brinio de Groot</string>
    <string name="LoginFietser">Inloggen als fietser:</string>
    <string name="LoginFietsenmaker">Inloggen als fietsenmaker:</string>


</resources>