<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btnProfile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FietsenmakerProfiel">

    <ImageView
        android:id="@+id/fotoFietsenmaker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/fotoFietsenmaker"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/btnProfile2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/rounded_button"
        android:text="@string/btnProfile2"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/personalMessage"
        android:layout_width="222dp"
        android:layout_height="96dp"
        android:text="@string/personalMessage"
        app:layout_constraintBottom_toBottomOf="@+id/fotoFietsenmaker"
        app:layout_constraintEnd_toEndOf="@+id/btnProfile2"
        app:layout_constraintStart_toEndOf="@+id/fotoFietsenmaker"
        app:layout_constraintTop_toBottomOf="@+id/btnProfile2" />

    <TextView
        android:id="@+id/txtNaamFietsemaker"
        android:layout_width="77dp"
        android:layout_height="27dp"
        android:text="@string/txtNaamFietsemaker"
        app:layout_constraintStart_toStartOf="@+id/fotoFietsenmaker"
        app:layout_constraintTop_toBottomOf="@+id/fotoFietsenmaker" />

    <TextView
        android:id="@+id/txtInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/txtInfo"
        app:layout_constraintStart_toStartOf="@+id/txtNaamFietsemaker"
        app:layout_constraintTop_toBottomOf="@+id/txtNaamFietsemaker" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="129dp"
        android:layout_height="44dp"
        android:text="@string/checkBox1"
        app:layout_constraintStart_toStartOf="@+id/specialisaties"
        app:layout_constraintTop_toBottomOf="@+id/specialisaties" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/checkBox2"
        app:layout_constraintStart_toStartOf="@+id/checkBox1"
        app:layout_constraintTop_toBottomOf="@+id/checkBox1" />

    <TextView
        android:id="@+id/specialisaties"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/specialisaties"
        app:layout_constraintStart_toStartOf="@+id/txtInfo"
        app:layout_constraintTop_toBottomOf="@+id/txtInfo" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkBox3"
        app:layout_constraintStart_toStartOf="@+id/checkBox6"
        app:layout_constraintTop_toBottomOf="@+id/checkBox6" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkBox4"
        app:layout_constraintStart_toStartOf="@+id/checkBox3"
        app:layout_constraintTop_toBottomOf="@+id/checkBox3" />

    <CheckBox
        android:id="@+id/checkBox5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkBox5"
        app:layout_constraintStart_toStartOf="@+id/checkBox2"
        app:layout_constraintTop_toBottomOf="@+id/checkBox2" />

    <CheckBox
        android:id="@+id/checkBox6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkBox6"
        app:layout_constraintStart_toStartOf="@+id/checkBox5"
        app:layout_constraintTop_toBottomOf="@+id/checkBox5" />

    <HorizontalScrollView
        android:id="@+id/ReviewBar"
        android:layout_width="338dp"
        android:layout_height="85dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox4"/>

</androidx.constraintlayout.widget.ConstraintLayout>