<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstScreen">

    <TextView
        android:id="@+id/txtFS1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="52dp"
        android:text="@string/FsMainText"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtFS2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/FsFietser"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtFS1" />

    <TextView
        android:id="@+id/txtFS3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="136dp"
        android:text="@string/FsFietsenmaker"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFS1" />

    <Button
        android:id="@+id/btnFS1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="88dp"
        android:onClick="onBtnFietser_Clicked"
        android:text="@string/FsClick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtFS2" />

    <Button
        android:id="@+id/btnFS2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="104dp"
        android:onClick="onBtnFietsenmaker_Clicked"
        android:text="@string/FsClick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtFS3" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="252dp"
        android:layout_height="227dp"
        android:layout_marginStart="36dp"
        app:layout_constraintStart_toEndOf="@+id/btnFS1"
        app:layout_constraintTop_toBottomOf="@+id/txtFS2"
        app:srcCompat="@drawable/foto1" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="260dp"
        android:layout_height="264dp"
        android:layout_marginStart="36dp"
        app:layout_constraintStart_toEndOf="@+id/btnFS2"
        app:layout_constraintTop_toBottomOf="@+id/txtFS3"
        app:srcCompat="@drawable/foto2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/FsDev"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>